<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTituloRegistro"
        android:text="@string/registro_usuario"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"/>

    <EditText
        android:id="@+id/txtNombre"
        android:hint="@string/nombre_cliente"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtEmail"
        android:hint="@string/correo"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:text="@string/guardar_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnVerUsuarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ver Usuarios Guardados"
        android:layout_marginTop="16dp"/>

</LinearLayout>
